--- a/OtherProjects/FoxwallDashboard/Styles/Site.css
+++ b/OtherProjects/FoxwallDashboard/Styles/Site.css
@@ -8,7 +8,7 @@ body
     font-family: "Helvetica Neue", "Lucida Grande", "Segoe UI", Arial, Helvetica, Verdana, sans-serif;
     margin: 0px;
     padding: 0px;
-    color: #696969;
+    
 }
 
 a:link, a:visited
@@ -99,7 +99,7 @@ first child of the left and right table columns */
     position: relative;
     margin: 0px;
     padding: 0px;
-    background: #4b6c9e;
+    background: #660000;
     width: 100%;
 }
 
@@ -144,7 +144,7 @@ first child of the left and right table columns */
 
 div.hideSkiplink
 {
-    background-color:#3a4f63;
+    background-color:#444444;
     width:100%;
 }
 
@@ -163,9 +163,9 @@ div.menu ul
 
 div.menu ul li a, div.menu ul li a:visited
 {
-    background-color: #465c71;
-    border: 1px #4e667d solid;
-    color: #dde4ec;
+    background-color: #666666;
+    border: 1px #444444 solid;
+    color: #FFFFFF;
     display: block;
     line-height: 1.35em;
     padding: 4px 20px;
@@ -175,66 +175,18 @@ div.menu ul li a, div.menu ul li a:visited
 
 div.menu ul li a:hover
 {
-    background-color: #bfcbd6;
-    color: #465c71;
+    background-color: #666666;
+    color: #FFFFFF;
     text-decoration: none;
 }
 
 div.menu ul li a:active
 {
-    background-color: #465c71;
-    color: #cfdbe6;
+    background-color: #555555;
+    color: #FFFFFF;
     text-decoration: none;
 }
 
-/* FORM ELEMENTS   
-----------------------------------------------------------*/
-
-fieldset
-{
-    margin: 1em 0px;
-    padding: 1em;
-    border: 1px solid #ccc;
-}
-
-fieldset p 
-{
-    margin: 2px 12px 10px 10px;
-}
-
-fieldset.login label, fieldset.register label, fieldset.changePassword label
-{
-    display: block;
-}
-
-fieldset label.inline 
-{
-    display: inline;
-}
-
-legend 
-{
-    font-size: 1.1em;
-    font-weight: 600;
-    padding: 2px 4px 8px 4px;
-}
-
-input.textEntry 
-{
-    width: 320px;
-    border: 1px solid #ccc;
-}
-
-input.passwordEntry 
-{
-    width: 320px;
-    border: 1px solid #ccc;
-}
-
-div.accountInfo
-{
-    width: 42%;
-}
 
 /* MISC  
 ----------------------------------------------------------*/
@@ -291,4 +243,17 @@ div.accountInfo
 {
     text-align: right;
     padding-right: 10px;
+}
+
+/* FORM ELEMENTS   
+---------------------------------------------------------- */
+
+.LabelTitle
+{
+    font-weight: bold;
+}
+
+.Error
+{
+    color: Red;
 }
