Added people management.

--- a/OtherProjects/FoxwallDashboard/Site.Master
+++ b/OtherProjects/FoxwallDashboard/Site.Master
@@ -25,7 +25,7 @@
             <div class="clear hideSkiplink">
                 <asp:Menu ID="NavigationMenu" runat="server" CssClass="menu" EnableViewState="false" IncludeStyleBlock="false" Orientation="Horizontal">
                     <Items>
-                        <asp:MenuItem NavigateUrl="~/AddCall.aspx" Text="Calls"/>
+                        <asp:MenuItem NavigateUrl="~/EditCall.aspx" Text="Calls"/>
                         <asp:MenuItem NavigateUrl="~/People.aspx" Text="People"/>
                         <asp:MenuItem NavigateUrl="~/Reports.aspx" Text="Reports"/>
                         <asp:MenuItem NavigateUrl="~/Help.aspx" Text="Help"/>
