Fixing relative links.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,12 +19,12 @@
       </a>
       <div class="trigger">
         
-    <a class="page-link" href="/install">Installation</a>
-    <a class="page-link" href="/releases">Releases</a>
-    <a class="page-link" href="/core">Core</a>
-    <a class="page-link" href="/addons">Addons</a>
-    <a class="page-link" href="/fs3">FS3</a>
-    <a class="page-link" href="/about">About</a>
+    <a class="page-link" href="{{site.siteroot}}/install">Installation</a>
+    <a class="page-link" href="{{site.siteroot}}/releases">Releases</a>
+    <a class="page-link" href="{{site.siteroot}}/core">Core</a>
+    <a class="page-link" href="{{site.siteroot}}/addons">Addons</a>
+    <a class="page-link" href="{{site.siteroot}}/fs3">FS3</a>
+    <a class="page-link" href="{{site.siteroot}}/about">About</a>
        
       </div>
     </nav>
