Fixing header and footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
     <div class="footer-col-2 column">
       <ul>
         <li>
-          <a href="https://github.com/{{ site.username }}">
+          <a href="https://github.com/{{ site.username }}@GitHub">
             
             <span class="username">{{ site.username }}</span>
           </a>
